# lie_truth_probing

./: .gitignore  CLAUDE.md  PIPELINE.md  config.py  extract_activations.py  game_validation.json  game_werewolf.json  instructed_lie_truth.json  instructed_validation.json  probing_writeup_draft.txt  pyproject.toml  spontaneous_1.json  spontaneous_2.json  spontaneous_inconsistent.json  sycophancy_answer.json  sycophancy_are_you_sure.json  train_candidates.py  upload_to_docent.py
agentic-misalignment/: INTEGRATION.md
agentic-misalignment/scripts/: generate_prompts.py
autoprobe/: README.md  __init__.py  candidates.py  evaluator.py  features.py  probes.py  program.md  run.py  specs.py
eval/: auroc_eval.py  decompose_af_probes.py  generate_baseline.py  plot_baseline_comparison.py  probe_af_vllm.py  probe_apollo.py  probe_utils.py  replay_probe.py  run_decomposition.sh  run_full_af_eval.sh  score_baseline.py  sweep_layer_trainsets.py  sweep_positions.py  sweep_shared_configs.py
eval/_archive/: cross_direction_auroc.py  (+4 more)
generate_datasets/: audit_pairs.py  diagnose_confounds.py  filter_datasets.py  pair_filters.py  run_all_vllm.sh
lab_notes/: performative_misalignment_lab_notes.tex
probes/: artifact_utils.py  has_shared_artifact.py  make_all_plots.sh  plot_probe_results.py  torch_accel.py
tests/: test_audit_pairs.py  test_autoprobe.py  test_eval_roles.py  test_game_dataset_schema.py  test_instructed_judge.py  test_mass_mean_degenerate.py  test_shared_direction_degenerate.py  test_sweep_positions_args.py  test_sycophancy_feedback.py  test_torch_accel.py
(+134 files in other folders)
